# dotnet-pre-commit-mirror-maker

./: README.md  setup.cfg
dotnet_pre_commit_mirror_maker/: languages.py  main.py  make_repo.py
tests/: languages_test.py  main_test.py  make_repo_test.py
