[metadata]
name = dotnet_pre_commit_mirror_maker
version = 2.0.0
description = Scripts for creating pre-commit mirror repositories for dotnet tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pre-commit/dotnet-pre-commit-mirror-maker
author = Thomas Carroll
author_email = thomas.carroll@kroll.com
license = MIT
license_files = LICENSE
platforms = all
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.10

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    dotnet-pre-commit-mirror = dotnet_pre_commit_mirror_maker.main:main

[options.package_data]
dotnet_pre_commit_mirror_maker =
    all/.pre-commit-hooks.yaml
    all/.version
    all/*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
